test/files/neg/t5091.check
t5091.scala:8: error: recursive value xxx needs type
    val param = bar(xxx)
                    ^
one error found
